[gd_scene load_steps=10 format=3 uid="uid://bv70kwlvkx154"]

[ext_resource type="Script" uid="uid://bj4rke6mosxtd" path="res://Scenes/BoosterUi/booster_ui.gd" id="1_tk7pq"]
[ext_resource type="Texture2D" path="res://Assets/BoosterUI/back_button.tres" id="2_e8myy"]
[ext_resource type="Texture2D" path="res://Assets/BoosterButton/shuffle_icon.tres" id="3_e8myy"]
[ext_resource type="Texture2D" path="res://Assets/BoosterUI/use_button.tres" id="4_e8myy"]
[ext_resource type="FontFile" uid="uid://cjofpiuwfbr7i" path="res://Assets/fonts/Lilita One Regular.ttf" id="7_xlsem"]

[sub_resource type="Gradient" id="Gradient_e8myy"]
offsets = PackedFloat32Array(0.003003, 1)
colors = PackedColorArray(0.439216, 0.737255, 0, 1, 0.623529, 0.87451, 0.133333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_blr2k"]
gradient = SubResource("Gradient_e8myy")
height = 30
fill_from = Vector2(1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e8myy"]
font = ExtResource("7_xlsem")
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_xe38g"]
line_spacing = 0.0
font = ExtResource("7_xlsem")
font_size = 27

[node name="BoosterUI" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/separation = 53
alignment = 1
script = ExtResource("1_tk7pq")

[node name="CancelButton" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("2_e8myy")
texture_pressed = ExtResource("2_e8myy")
texture_hover = ExtResource("2_e8myy")
texture_focused = ExtResource("2_e8myy")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_e8myy")

[node name="UseButton" type="TextureButton" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("4_e8myy")

[node name="TODO_REMOVE_KOSTYL" type="TextureRect" parent="UseButton"]
layout_mode = 0
offset_left = 12.0
offset_top = 28.0
offset_right = 176.0
offset_bottom = 58.0
texture = SubResource("GradientTexture2D_blr2k")

[node name="Label" type="Label" parent="UseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -14.5
offset_right = 82.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
text = "BTN_USE"
label_settings = SubResource("LabelSettings_e8myy")
horizontal_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(208, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Выберите клетку для очистки"
label_settings = SubResource("LabelSettings_xe38g")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="UseButton" to="." method="_on_use_button_pressed"]
